hphp/test/zend/good/ext/openssl/tests/bug38261.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded("openssl")) die("skip");
}
