hphp/test/zend/bad/Zend/tests/declare_004.php.skipif
<?php
if (!ini_get("zend.multibyte")) {
  die("skip Requires zend.multibyte=1");
}
?>